@@ -1,3 +1,8 @@
+2004-05-12  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* src/imagebutton.{cc,h}: Remove files as they're no longer used.
+	* src/Makefile.am (regexxer_SOURCES): Remove imagebutton.{cc,h}.
+
 2004-05-10  Daniel Elstner  <daniel.elstner@gmx.net>
 
 	* src/globalstrings.h (glade_mainwindow_filename): New string.
